= zooimage News

== Changes in zooimage 5.4-3

* Cells counting per colonies (per particles) is now provided.


== Changes in zooimage 5.4-2

* Correction of one bug in the function addVigsToTrain().

* The functions activeLearning() and viewFrenchManual() were not exported in
  the NAMESPACE, but are required for the menus. Fixed.


== Changes in zooimage 5.4-1

* Correction of various bugs by Guillaume Wacquet.


== Changes in zooimage 5.4-0

* Functions to count cells in a particle (colony): countCells() and the
  corresponding countCellsGUI() function for an access through the menu.

* Function to build predictive models for cells in particles (colonies) after
  counting: cellModel().

* Function to compute the number of cells in particles in a new sample:
  cellCompute().
  
* Function to make zidb file for FlowCAM data through the menu:
  makeZidbMakeFlowCAM().

* Correct makeClass() function in the menu (missing formula).
  
* Functions to process active learning: contextSelection(), the associated
  addItemsToTrain() and dropItemsToTrain() functions to complete the training
  set with validated items, and the corresponding activeLearningGUI() function
  for an access through the menu. Integration in the classification process.
  
* Function compTrain() to compare two training sets and highlight differences.

* Translation of the user manual in French and update to include all changes.

* Adaptation of menus to include also the new features.


== Changes in zooimage 5.3-0

* calcVarsVIS() now included in calcVars() and not accessible any more as top
  function (to avoid duplicate code).

* ecd() and ecdCell() are now merged in ecd() using arguments cells = 1.

* errorCorrection() and planktonSorterPage() functions now use the new interface
  to get R httpd server port, for R svn rev >= 67550.
  
* In the shiny app, dataTableOutput is now called from the DT package.
  Dependency to DT is now added.
  